add tooltip to roll

--- a/Naheulbeuk/Naheulbeuk.html
+++ b/Naheulbeuk/Naheulbeuk.html
@@ -510,7 +510,7 @@
 							</div>
 							<div class="sheet-col-4">
 								<button type="roll" value="@{displayJet} &{template:default} {{name=@{Personnage_Nom} prépare son coup spécial @{CoupSpecial_Nom} }} {{ Épreuve=@{CoupSpecial_Jet} }} {{ Résultat=[[1d20cs<1cf>20]] }}" > Épreuve</button>
-								<button type="roll" class="sheet-rollDegats" value="@{displayJet} &{template:default} {{name=Dégats de @{Personnage_Nom} avec @{CoupSpecial_Nom}}} {{ Dégats=[[@{CoupSpecial_Degats} + @{CoupSpecial_Degats_arme}]] }}" > Dégats</button>
+								<button type="roll" class="sheet-rollDegats" value="@{displayJet} &{template:default} {{name=Dégats de @{Personnage_Nom} avec @{CoupSpecial_Nom}}} {{ Dégats=[[@{CoupSpecial_Degats}[Dégats] + @{CoupSpecial_Degats_arme}[Arme]]] }}" > Dégats</button>
 								<button type="roll" class="sheet-rollGrimoire" value="@{displayJet} &{template:coupSpecial} {{name=@{coupspecial_nom}}} {{coupspecial_jet=@{coupspecial_jet}}} {{coupspecial_degats=@{coupspecial_degats}}} {{coupspecial_degats_arme=@{coupspecial_degats_arme}}} {{coupspecial_utilisation=@{coupspecial_utilisation}}} {{coupspecial_echec=@{coupspecial_echec}}} {{coupspecial_effet=@{coupspecial_effet}}} {{coupspecial_note=@{coupspecial_note}}} {{coupspecial_condition=@{coupspecial_condition}}} {{coupspecial_critique=@{coupspecial_critique}}} {{coupspecial_fumble=@{coupspecial_fumble}}}"> Grimoire </button>
 							</div>
 						</div>
@@ -869,19 +869,19 @@
 										<input type="text" name="attr_Gun_Degats1" value="1d6" />
 									</div>
 									<div class="sheet-col-2">
-										<button type="roll" class="sheet-rollDegats" name="roll_rollDegats1" value="@{displayJet} &{template:dmg} {{name=Dégats de @{Personnage_Nom} avec @{Gun_Nom} (@{Gun_Portee1}) }} {{dmg= [[ @{Gun_Degats1} + @{munition_degats} ]] }} {{munition=@{munition_nom}}} {{munition_effet=@{munition_effet}}}"> Dégats </button>
+										<button type="roll" class="sheet-rollDegats" name="roll_rollDegats1" value="@{displayJet} &{template:dmg} {{name=Dégats de @{Personnage_Nom} avec @{Gun_Nom} (@{Gun_Portee1}) }} {{dmg= [[ @{Gun_Degats1}[Arme] + @{munition_degats}[Munition] ]] }} {{munition=@{munition_nom}}} {{munition_effet=@{munition_effet}}}"> Dégats </button>
 									</div>
 									<div class="sheet-col-1">
 										<input type="text" name="attr_Gun_Degats2" value="" placeholder="1d6" />
 									</div>
 									<div class="sheet-col-2">
-										<button type="roll" class="sheet-rollDegats" name="roll_rollDegats2" value="@{displayJet} &{template:dmg} {{name=Dégats de @{Personnage_Nom} avec @{Gun_Nom} (@{Gun_Portee2}) }} {{dmg= [[ @{Gun_Degats2} + @{munition_degats} ]] }} {{munition=@{munition_nom}}} {{munition_effet=@{munition_effet}}}"> Dégats </button>
+										<button type="roll" class="sheet-rollDegats" name="roll_rollDegats2" value="@{displayJet} &{template:dmg} {{name=Dégats de @{Personnage_Nom} avec @{Gun_Nom} (@{Gun_Portee2}) }} {{dmg= [[ @{Gun_Degats2}[Arme] + @{munition_degats}[Munition] ]] }} {{munition=@{munition_nom}}} {{munition_effet=@{munition_effet}}}"> Dégats </button>
 									</div>
 									<div class="sheet-col-1">
 										<input type="text" name="attr_Gun_Degats3" value="" placeholder="1d6" />
 									</div>
 									<div class="sheet-col-2">
-										<button type="roll" class="sheet-rollDegats" name="roll_rollDegats3" value="@{displayJet} &{template:dmg} {{name=Dégats de @{Personnage_Nom} avec @{Gun_Nom} (@{Gun_Portee3}) }} {{dmg= [[ @{Gun_Degats3} + @{munition_degats} ]] }} {{munition=@{munition_nom}}} {{munition_effet=@{munition_effet}}}"> Dégats </button>
+										<button type="roll" class="sheet-rollDegats" name="roll_rollDegats3" value="@{displayJet} &{template:dmg} {{name=Dégats de @{Personnage_Nom} avec @{Gun_Nom} (@{Gun_Portee3}) }} {{dmg= [[ @{Gun_Degats3}[Arme] + @{munition_degats}[Munition] ]] }} {{munition=@{munition_nom}}} {{munition_effet=@{munition_effet}}}"> Dégats </button>
 									</div>
 								</div>
 
@@ -1488,7 +1488,7 @@
 											<div class="sheet-col-2 sheet-bold sheet-right">+ intel ?</div>
 											<div class="sheet-col-1"><input type="checkbox" name="attr_MagieBonusInt" value="@{bonusDegatsIntel}" /></div>
 											<div class="sheet-col-2">
-												<button type="roll" class="sheet-rollDegats" value="@{displayJet} &{template:default} {{name=Dégats de @{Personnage_Nom} avec @{Magie_Nom}}} {{Dégats = [[@{Magie_Degats} + @{magieBonusInt} + @{bonusDegatsSorts}]] }}"> Dégats </button>
+												<button type="roll" class="sheet-rollDegats" value="@{displayJet} &{template:default} {{name=Dégats de @{Personnage_Nom} avec @{Magie_Nom}}} {{Dégats = [[@{Magie_Degats}[Magie] + @{magieBonusInt}[Int] + @{bonusDegatsSorts}[Equipement]]] }}"> Dégats </button>
 											</div>
 										</div>
 									</div>
@@ -3046,16 +3046,16 @@
 
 			sWeapon[ 'repeating_armes_' + idRow + '_arme_munition_display' ] = 0;
 			sWeapon[ 'repeating_armes_' + idRow + '_arme_totalat' ] = safeInt( v[ "stats_attaque_total" ] ) + safeInt( v[ `repeating_armes_${idRow}_arme_at` ] );
-			sWeapon[ 'repeating_armes_' + idRow + '_arme_totaldegats' ] = v[ `repeating_armes_${idRow}_arme_degats` ];
+			sWeapon[ 'repeating_armes_' + idRow + '_arme_totaldegats' ] = v[ `repeating_armes_${idRow}_arme_degats` ] + "[Arme]";
 
 			if( v[ `repeating_armes_${idRow}_arme_portee` ] === 'Dist.' ) {
 				sWeapon[ 'repeating_armes_' + idRow + '_arme_munition_display' ] = 1;
 				sWeapon[ 'repeating_armes_' + idRow + '_arme_totalat' ] = safeInt( v[ "stats_jet_total" ] ) + safeInt( v[ `repeating_armes_${idRow}_arme_at` ] ) + safeInt( v[ `repeating_armes_${idRow}_munition_modAd` ] );
-				sWeapon[ 'repeating_armes_' + idRow + '_arme_totaldegats' ] = v[ `repeating_armes_${idRow}_arme_degats` ] + " + " + v[ `repeating_armes_${idRow}_munition_degats` ];
+				sWeapon[ 'repeating_armes_' + idRow + '_arme_totaldegats' ] = v[ `repeating_armes_${idRow}_arme_degats` ] + "[Arme] + " + v[ `repeating_armes_${idRow}_munition_degats` ] + "[Munition]";
 			}
 
 			if( v[ `repeating_armes_${idRow}_arme_bonusforce` ] === "1" ) {
-				sWeapon[ 'repeating_armes_' + idRow + '_arme_totaldegats' ] += " + " + v[ "bonusdegatsforce" ];
+				sWeapon[ 'repeating_armes_' + idRow + '_arme_totaldegats' ] += " + " + v[ "bonusdegatsforce" ] + "[Bonus FO]";
 			}
 
 			setAttrs( sWeapon, { silent: true } );
