add new global stat bonusDegatAtk

--- a/Naheulbeuk/Naheulbeuk.html
+++ b/Naheulbeuk/Naheulbeuk.html
@@ -669,7 +669,14 @@
 		</div>
 
 		<!-- TAB Equipement -->
-		<div class="sheet-tab_equipement">
+		<div class="sheet-tab_equipement">		
+			<div class="sheet-row sheet-hint sheet-center">
+				<div class="sheet-col-4">Bonus de Force aux dégats :</div>
+				<div class="sheet-col-1"><input class="sheet-autoCalc" name="attr_BonusDegatsForce" value="0" readonly type="text"></div>
+				<div class="sheet-col-4">Bonus d'équipement aux dégats :</div>
+				<div class="sheet-col-1"><input name="attr_BonusDegatsAtk" value="0" type="text"></div>
+			</div>
+			<br />
 			<div class="sheet-armes">
 				<h2>Armement & Baston</h2>
 				<!-- hidden roll for chat buttons --->
@@ -808,11 +815,6 @@
 						</div>
 					</div>
 				</fieldset>
-				<br>
-				<div class="sheet-row sheet-hint">
-					<div class="sheet-col-4">Le Bonus / Malus aux dégats octroyé par la Force :</div>
-					<div class="sheet-col-1"><input class="sheet-autoCalc sheet-col-1" name="attr_BonusDegatsForce" value="0" readonly type="text"></div>
-				</div>
 			</div>
 			<br />
 			<div class="sheet-guns">
@@ -2701,7 +2703,7 @@
 		var idRow = e[ "sourceAttribute" ].split( '_' )[2];
 		updateWeapon( idRow );
 	});
-	on("change:stats_jet_total change:stats_attaque_total change:bonusdegatsforce", function( e ) {
+	on("change:stats_jet_total change:stats_attaque_total change:bonusdegatsforce change:bonusdegatsatk", function( e ) {
 		updateWeapons();
 	});
 	// Total golds
@@ -3059,7 +3061,7 @@
 		getAttrs( [
 					`repeating_armes_${idRow}_arme_portee`, `repeating_armes_${idRow}_arme_at`, `repeating_armes_${idRow}_arme_degats`, `repeating_armes_${idRow}_arme_bonusforce`,
 					`repeating_armes_${idRow}_munition_modAd`, `repeating_armes_${idRow}_munition_degats`,
-					"stats_jet_total", "stats_attaque_total", "bonusdegatsforce"
+					"stats_jet_total", "stats_attaque_total", "bonusdegatsforce", "bonusdegatsatk"
 				] , function( v ) {
 
 			sWeapon[ 'repeating_armes_' + idRow + '_arme_munition_display' ] = 0;
@@ -3075,6 +3077,8 @@
 			if( v[ `repeating_armes_${idRow}_arme_bonusforce` ] === "1" ) {
 				sWeapon[ 'repeating_armes_' + idRow + '_arme_totaldegats' ] += " + " + v[ "bonusdegatsforce" ] + "[Bonus FO]";
 			}
+
+			sWeapon[ 'repeating_armes_' + idRow + '_arme_totaldegats' ] += " + " + v[ "bonusdegatsatk" ] + "[Bonus Equipement]";
 
 			setAttrs( sWeapon, { silent: true } );
 		});
