--- a/Naheulbeuk/Naheulbeuk.html
+++ b/Naheulbeuk/Naheulbeuk.html
@@ -2324,7 +2324,12 @@
 					</div>
 				</div>
 			</fieldset>
-		</div>
+		</div>		
+	</div>
+
+	<!-- TAB Reglages -->
+	<div class="sheet-body sheet-reglages">
+		<h2>Réglages (v2.9) <input type="checkbox" name="attr_modal_patchNote" class="sheet-modal" value="1" title="Notes de mise à jour"><span class="sheet-cog" title="Notes de mise à jour">?</span></h2>
 		<!-- Patch note --->
 		<input type="checkbox" class="sheet-hidden sheet-modal" name="attr_modal_patchNote" value="1" />
 		<div class="sheet-modal-wrapper">
@@ -2333,6 +2338,16 @@
 					<h2>Notes de mise à jour <span class="sheet-close">*</span><input type="checkbox" class="sheet-modal" name="attr_modal_patchNote" value="1"></h2>
 				</div>
 				<div class="sheet-modal_body">
+					<b>v2.9</b><br>
+					<ul>
+						<li>Rajout des jets de <b>COU,INT,CHA</b> pour les Coups Spéciaux</li>
+						<li>Permet de noter les Traits Particulier avec du texte plutôt que le tableau de cases</li>
+						<li>Rajout du <b>bonus d'équipement aux dégâts</b> pour les attaques physiques</li>
+						<li>Tous les boutons peuvent êtres Drag&Drop dans la barre de macro</li>
+						<li>Passe la Confrontation sur 1d6 par défaut</li>
+						<li>Corrections mineures</li>
+						<li>Mise à jour graphique mineure</li>
+					</ul>
 					<b>v2.8.2</b><br>
 					<ul>
 						<li>Rajout des <b>Notes de mise à jour</b> dans les Réglages&nbsp;<span class="sheet-pictos">y</span></li>
@@ -2356,11 +2371,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
-	<!-- TAB Reglages -->
-	<div class="sheet-body sheet-reglages">
-		<h2>Réglages (v2.8.2) <input type="checkbox" name="attr_modal_patchNote" class="sheet-modal" value="1" title="Notes de mise à jour"><span class="sheet-cog" title="Notes de mise à jour">?</span></h2>
 		<div class="sheet-row">
 			<div class="sheet-col-6">
 				<p>
@@ -3615,7 +3625,7 @@
 				console.log( "nouvelle version, ouverture du patch note" );
 				setAttrs( { "modal_patchnote" : 1 } );
 			}
-			setAttrs( { "version" : 2.82 } );
+			setAttrs( { "version" : 2.9 } );
 			console.log( "ok" );
 		});
 	}
