--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -20,14 +20,15 @@
 	        <div class="content">
 	            <h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 	            <ul>
-	                <li>Added button links to GURPS Wiki and Forum Thread</li>
-	                <li>Skills Tab. Added Wildcard! Skill level option</li>
-	                <li>Roll Results. Refactored logic to show text and handle critical rolls better.</li>
 	                <li>
-            	        Added correct names to the new roll buttons. That way, if you drag the button to the macro quick bar, then a useful name will show. 
-            	        For example; drag the die for Fright to the quick macro bar and it will be called {name}: vsFright
-            	    </li>
-	            </ul>
+	                    Notes boxes for advantages, disadvantages, racial traits, skills, techniques, possesions table, and spells
+	                    were converted to a text area, allowing you to enter more notes easily. There's also an option to include 
+	                    the notes on the roll table. For the possesions table, you could use the text area to list items, such as 
+	                    items in a backpack.
+	                </li>
+	                <li>Skills tab: changed column heading from BONUS to MOD. MOD can be positive or negative numbers. Suggested by Mike W.</li>
+	                <li>Removed powered by GURPS logo. Suggested by Mike W.</li>
+                </ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
 	        </div>
@@ -1848,7 +1849,7 @@
 							<input type="number" name="attr_foa" />
 						</div>
 						<div class="sheet-cell sheet-col2">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Frequency of Appearance Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{foa} + @{modifier}]]}} {{notes=@{notes}}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsAFOA" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Frequency of Appearance Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{foa} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsAFOA" />
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<input type="number" name="attr_points" />
@@ -1857,12 +1858,13 @@
 							<input type="text" name="attr_ref" />
 						</div>
 					</div> <!-- .sheet-row -->
-					<div class="sheet-row sheet-row-details">
-						<div class="sheet-cell sheet-col0 sheet-label">
-							Notes
-						</div>
-						<div class="sheet-cell sheet-col1">
-							<input type="text" name="attr_notes" />
+					<div class="row row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <input type="checkbox" name="attr_show_notes" value="1" />
+						        <span class="label">Show notes on roll table</span>
+						    </div>
+						    <textarea name="attr_notes"></textarea>
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_traits -->
@@ -1908,7 +1910,7 @@
 							<input type="number" name="attr_control_rating" />
 						</div>
 						<div class="sheet-cell sheet-col2">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Self-control Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{control_rating} + @{modifier}]]}} {{notes=@{notes}}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsDSCR" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Self-control Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{control_rating} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsDSCR" />
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<input type="number" name="attr_points" />
@@ -1917,12 +1919,13 @@
 							<input type="text" name="attr_ref" />
 						</div>
 					</div> <!-- .sheet-row -->
-					<div class="sheet-row sheet-row-details">
-						<div class="sheet-cell sheet-col0 sheet-label">
-							Notes
-						</div>
-						<div class="sheet-cell sheet-col1">
-							<input type="text" name="attr_notes" />
+					<div class="sheet-row sheet-row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <input type="checkbox" name="attr_show_notes" value="1" />
+						        <span class="label">Show notes on roll table</span>
+						    </div>
+						    <textarea name="attr_notes"></textarea>
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_disadvantages -->
@@ -1967,7 +1970,7 @@
 							<input type="number" name="attr_control_rating" />
 						</div>
 						<div class="sheet-cell sheet-col2">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Self-control Check}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{control_rating} + @{modifier}]]}} {{notes=@{notes}}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsRSCR" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Self-control Check}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{control_rating} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsRSCR" />
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<input type="number" name="attr_points" />
@@ -1976,12 +1979,13 @@
 							<input type="text" name="attr_ref" />
 						</div>
 					</div> <!-- .sheet-row -->
-					<div class="sheet-row sheet-row-details">
-						<div class="sheet-cell sheet-col0 sheet-label">
-							Notes
-						</div>
-						<div class="sheet-cell sheet-col1">
-							<input type="text" name="attr_notes" />
+					<div class="sheet-row sheet-row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <input type="checkbox" name="attr_show_notes" value="1" />
+						        <span class="label">Show notes on roll table</span>
+						    </div>
+						    <textarea name="attr_notes"></textarea>
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_racial -->
@@ -2261,7 +2265,7 @@
 							PTS = 3, 6, 12, 24, 36, etc.
 						</span>
 					</div>
-					<div class="sheet-cell sheet-col6">Bonus</div>
+					<div class="sheet-cell sheet-col6">Mod</div>
 					<div class="sheet-cell sheet-col7">Pts</div>
 					<div class="sheet-cell sheet-col8">Ref</div>
 				</div> <!-- .sheet-header -->
@@ -2274,7 +2278,7 @@
 							<input type="text" name="attr_name" />
 						</div>
 						<div class="sheet-cell sheet-col1">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Skill Roll}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{level} + @{modifier}]]}} {{notes=@{notes}}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Skill Roll}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{level} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
 						</div>
 						<div class="sheet-cell sheet-col2">
 							<input type="text" name="attr_tl" />
@@ -2315,12 +2319,13 @@
 							<input type="text" name="attr_ref" />
 						</div>
 					</div> <!-- .sheet-row -->
-					<div class="sheet-row sheet-row-details">
-						<div class="sheet-cell sheet-col0 sheet-label">
-							Notes
-						</div>
-						<div class="sheet-cell sheet-col1">
-							<input type="text" name="attr_notes" />
+					<div class="sheet-row sheet-row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <input type="checkbox" name="attr_show_notes" value="1" />
+						        <span class="label">Show notes on roll table</span>
+						    </div>
+						    <textarea name="attr_notes"></textarea>
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_skills -->
@@ -2339,7 +2344,7 @@
 					<div class="sheet-cell sheet-col3">Max</div>
 					<div class="sheet-cell sheet-col4">Level</div>
 					<div class="sheet-cell sheet-col5">Cost</div>
-					<div class="sheet-cell sheet-col6">Bonus</div>
+					<div class="sheet-cell sheet-col6">Mod</div>
 					<div class="sheet-cell sheet-col7">Pts</div>
 					<div class="sheet-cell sheet-col8">Ref</div>
 				</div> <!-- .sheet-header -->
@@ -2375,12 +2380,13 @@
 							<input type="text" name="attr_ref" />
 						</div>
 					</div> <!-- .sheet-row -->
-					<div class="sheet-row sheet-row-details">
-						<div class="sheet-cell sheet-col0 sheet-label">
-							Notes
-						</div>
-						<div class="sheet-cell sheet-col1">
-							<input type="text" name="attr_notes" />
+					<div class="sheet-row sheet-row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <input type="checkbox" name="attr_show_notes" value="1" />
+						        <span class="label">Show notes on roll table</span>
+						    </div>
+						    <textarea name="attr_notes"></textarea>
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_techniques -->
@@ -2766,7 +2772,7 @@
 							<input type="text" name="attr_skill" />
 						</div>
 						<div class="sheet-cell sheet-col6">
-						    <button type="roll" class="template-attack-roll" value="@{roll}&{template:skillRoll} {{type=Melee Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{reach=@{reach}}} {{notes=@{notes}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+						    <button type="roll" class="template-attack-roll" value="@{roll}&{template:skillRoll} {{type=Melee Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{reach=@{reach}}} {{notes=@{notes}}} {{showNotes=[1]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
 						</div>
 					</div> <!-- .sheet-row -->
 					<div class="sheet-row sheet-row-details2">
@@ -2944,7 +2950,7 @@
 							<input type="text" name="attr_skill" />
 						</div>
 						<div class="sheet-cell sheet-col11">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{notes=@{notes}}} {{rof=@{rof}}} {{recoil=@{recoil}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[1]}} {{rof=@{rof}}} {{recoil=@{recoil}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
 						</div>
 					</div> <!-- .sheet-row -->
 					<div class="sheet-row sheet-row-details2">
@@ -3456,12 +3462,12 @@
 							<span name="attr_weighttotal" value="0.000" />
 						</div>
 					</div> <!-- .sheet-row -->
-					<div class="sheet-row sheet-row-details">
-						<div class="sheet-cell sheet-col0 sheet-label">
-							Notes
-						</div>
-						<div class="sheet-cell sheet-col1">
-							<input type="text" name="attr_notes" />
+					<div class="sheet-row sheet-row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <span class="label">Notes</span>
+						    </div>
+						    <textarea name="attr_notes"></textarea>
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_item -->
@@ -3537,7 +3543,7 @@
 							<input type="text" name="attr_name" />
 						</div>
 						<div class="sheet-cell sheet-col1">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Spell Skill Roll}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{level} + @{modifier}]]}} {{notes=@{notes}}} {{castingTime=@{casttime}}} {{castingDuration=@{duration}}} {{castingCost=@{cost}}} {{castingMaintain=@{maintain}}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Spell Skill Roll}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{level} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{castingTime=@{casttime}}} {{castingDuration=@{duration}}} {{castingCost=@{cost}}} {{castingMaintain=@{maintain}}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
 						</div>
 						<div class="sheet-cell sheet-col2">
 							<input type="text" name="attr_level" disabled="disabled"
@@ -3568,12 +3574,13 @@
 							<input type="text" name="attr_ref" />
 						</div>
 					</div> <!-- .sheet-row -->
-					<div class="sheet-row sheet-row-details">
-						<div class="sheet-cell sheet-col0 sheet-label">
-							Notes
-						</div>
-						<div class="sheet-cell sheet-col1">
-							<input type="text" name="attr_notes" />
+					<div class="sheet-row sheet-row-details notebox">
+						<div class="cell col-notebox">
+						    <div class="show-notes">
+						        <input type="checkbox" name="attr_show_notes" value="1" />
+						        <span class="label">Show notes on roll table</span>
+						    </div>
+						    <textarea name="attr_notes"></textarea>
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_spells -->
@@ -3586,7 +3593,7 @@
 
 	<div>
 
-	<h3>Latest Changes: Updated 6/4/2019</h3>
+	<h3>Latest Changes: Updated 6/24/2019</h3>
 		
 	<h3>Known Issues</h3>
 	<ul>
@@ -3617,6 +3624,18 @@
 		<p>If there are others that are working on or wish to work on this sheet, lets coordinate using the Roll20 forum for now - perhaps later we can use GitHub.</p>
 	<ul>
 	
+	<h4>Version: 1.5.9</h4>
+	
+	<ul>
+        <li>
+	        Notes boxes for advantages, disadvantages, racial traits, skills, techniques, inventory items, and spells
+	        were converted to a text area, allowing you to enter more notes easily. There's also an option to include 
+	        the notes on the roll table.
+        </li>
+	    <li>Skills tab: changed column heading from BONUS to MOD. MOD can be positive or negative numbers. Suggested by Mike W.</li>
+	    <li>Removed powered by GURPS logo. Suggested by Mike W.</li>  
+    </ul>
+	            
 	<h4>Version: 1.5.8</h4>
 	
 	<ul>
@@ -3996,8 +4015,6 @@ Skull Damage x4
 
 	<div class="logo">
 		<hr />
-		<img height="30px" src="http://www.sjgames.com/poweredbygurps/img/logo.gif" />
-		<hr />
 		<div class="control">
 		    <button type="roll" class="no-decoration" name="roll_blank" value="https://wiki.roll20.net/GURPS_4th_Edition" title="Show link in chat. NOTE: Right-click to open in new window">
 		        GURPS 4th Edition Roll20 Wiki Page
@@ -4210,12 +4227,14 @@ Skull Damage x4
                     </tr>
                     {{/damageTypeNote}}
                 {{/rollTotal() useDamageTypeNotes 1}}
-                {{#notes}}
-                <tr>
-                    <td class="label">Notes:</td>
-                    <td>{{notes}}</td>
-                </tr>
-                {{/notes}}
+                {{#rollTotal() showNotes 1}}
+                    {{#notes}}
+                    <tr>
+                        <td class="label">Notes:</td>
+                        <td>{{notes}}</td>
+                    </tr>
+                    {{/notes}}
+                {{/rollTotal() showNotes 1}}
                 {{#castingTime}}
                 <tr>
                     <td class="label">Time:</td>
@@ -4262,7 +4281,7 @@ Skull Damage x4
 
 	var noop = function () {}; // do nothing.
 
-	var version = "1.5.8";
+	var version = "1.5.9";
 
 	var modCascade = true;
 	
