--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -394,7 +394,7 @@
 						&nbsp;
 					</div>
 					<div class="sheet-cell sheet-col4">
-						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Unstun Check}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{stun_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{notes=If failed, must Do Nothing. \n<br />-4 to defenses, no retreat.\n<br />Roll per turn to recover.}}"  name="roll_vsUnstun" />
+						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Unstun Check}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{stun_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{showNotes=[[1]]}} {{notes=If failed, must Do Nothing. \n<br />-4 to defenses, no retreat.\n<br />Roll per turn to recover.}}"  name="roll_vsUnstun" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row sheet-sub-row sheet-row-condition-knockdown">
@@ -419,7 +419,7 @@
 						&nbsp;
 					</div>
 					<div class="sheet-cell sheet-col4">
-						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Knockdown Check}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{knockdown_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{notes=Fail means stunned. If fail by 5 or more, unconscious.}}"  name="roll_vsKnockdown" />
+						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Knockdown Check}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{knockdown_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{showNotes=[[1]]}} {{notes=Fail means stunned. If fail by 5 or more, unconscious.}}"  name="roll_vsKnockdown" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row sheet-sub-row sheet-row-unconscious">
@@ -441,7 +441,7 @@
 						<input type="number" name="attr_unconscious_check_points" value="0" step="2" />
 					</div>
 					<div class="sheet-cell sheet-col4">
-						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{showSuccessLabel=[[1]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Unconscious Check}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{unconscious_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{notes=If HP > 0, wake up in 15 minutes. \n<br />0 to -HP, roll HT per hour. \n<br />-HP or worse, Single HT after 12 hours. \n<br />If that fails, need medical attention, then HT roll every 12 hours or die.}}" name="roll_vsUnconsciousCheck" />
+						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{showSuccessLabel=[[1]]}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Unconscious Check}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{unconscious_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{showNotes=[[1]]}} {{notes=If HP > 0, wake up in 15 minutes. \n<br />0 to -HP, roll HT per hour. \n<br />-HP or worse, Single HT after 12 hours. \n<br />If that fails, need medical attention, then HT roll every 12 hours or die.}}" name="roll_vsUnconsciousCheck" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row sheet-sub-row margin-bottom sheet-row-death">
@@ -2655,7 +2655,7 @@
 							<input type="text" name="attr_skill" />
 						</div>
 						<div class="sheet-cell sheet-col4">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Defense Roll (@{type})}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{notes=@{info}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Defense Roll (@{type})}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{showNotes=[[1]]}} {{notes=@{info}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
 						</div>
 					</div> <!-- .sheet-row -->
 				</fieldset> <!-- .repeating_defense -->
@@ -2746,7 +2746,7 @@
 						</div>
 						<div class="sheet-cell sheet-col2">
 						    <input type="hidden" name="attr_damage_dice_icon" class="melee-damage-dice-icon" value="explode" />
-						    <button type="roll" value="@{roll}&{template:skillRoll} {{type=Melee Damage}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{damageRoll=[[@{damage}]]}} {{damageType=@{type}}} {{useDamageTypeNotes=[[@{use_damage_type_notes}]]}} {{damageTypeNote=@{damage_type_note}}} {{notes=@{damage_notes}}}" name="roll_damage" class="roll_damage" />
+						    <button type="roll" value="@{roll}&{template:skillRoll} {{type=Melee Damage}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{damageRoll=[[@{damage}]]}} {{damageType=@{type}}} {{useDamageTypeNotes=[[@{use_damage_type_notes}]]}} {{damageTypeNote=@{damage_type_note}}} {{showNotes=[[1]]}} {{notes=@{damage_notes}}}" name="roll_damage" class="roll_damage" />
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<select name="attr_type">
@@ -2773,7 +2773,7 @@
 							<input type="text" name="attr_skill" />
 						</div>
 						<div class="sheet-cell sheet-col6">
-						    <button type="roll" class="template-attack-roll" value="@{roll}&{template:skillRoll} {{type=Melee Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{reach=@{reach}}} {{notes=@{notes}}} {{showNotes=[1]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+						    <button type="roll" class="template-attack-roll" value="@{roll}&{template:skillRoll} {{type=Melee Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{reach=@{reach}}} {{notes=@{notes}}} {{showNotes=[[1]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
 						</div>
 					</div> <!-- .sheet-row -->
 					<div class="sheet-row sheet-row-details2">
@@ -2909,7 +2909,7 @@
 						</div>
 						<div class="sheet-cell sheet-col2">
 						    <input type="hidden" name="attr_damage_dice_icon" class="range-damage-dice-icon" value="explode" />
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Damage}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{damageRoll=[[@{damage}]]}} {{damageType=@{type}}} {{useDamageTypeNotes=[[@{use_damage_type_notes}]]}} {{damageTypeNote=@{damage_type_note}}} {{notes=@{damage_notes}}}" name="roll_damage" class="roll_damage" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Damage}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{damageRoll=[[@{damage}]]}} {{damageType=@{type}}} {{useDamageTypeNotes=[[@{use_damage_type_notes}]]}} {{damageTypeNote=@{damage_type_note}}} {{showNotes=[[1]]}} {{notes=@{damage_notes}}}" name="roll_damage" class="roll_damage" />
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<select name="attr_type">
@@ -2951,7 +2951,7 @@
 							<input type="text" name="attr_skill" />
 						</div>
 						<div class="sheet-cell sheet-col11">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[1]}} {{rof=@{rof}}} {{recoil=@{recoil}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[1]]}} {{rof=@{rof}}} {{recoil=@{recoil}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
 						</div>
 					</div> <!-- .sheet-row -->
 					<div class="sheet-row sheet-row-details2">
@@ -3129,7 +3129,7 @@
         					</div>
 					        <div class="sheet-cell sheet-col2">
         					    <input type="hidden" name="attr_damage_dice_icon" class="range-damage-dice-icon" value="explode" />
-        						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Damage}} {{characterName=@{character_name}}} {{skillName=Thrown Object @{thrown_object_weight} lbs.}} {{damageRoll=[[@{thrown_object_damage}]]}} {{damageType=@{thrown_object_damage_type}}} {{useDamageTypeNotes=[[@{use_damage_type_notes}]]}} {{damageTypeNote=@{thrown_object_damage_type_note}}} {{notes=@{thrown_object_damage_notes}}}" name="roll_damage" class="roll_damage" />
+        						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Damage}} {{characterName=@{character_name}}} {{skillName=Thrown Object @{thrown_object_weight} lbs.}} {{damageRoll=[[@{thrown_object_damage}]]}} {{damageType=@{thrown_object_damage_type}}} {{useDamageTypeNotes=[[@{use_damage_type_notes}]]}} {{damageTypeNote=@{thrown_object_damage_type_note}}} {{showNotes=[[1]]}} {{notes=@{thrown_object_damage_notes}}}" name="roll_damage" class="roll_damage" />
         					</div>
         					<div class="sheet-cell sheet-col3">
         						<select name="attr_thrown_object_damage_type">
@@ -3168,7 +3168,7 @@
         						<input type="text" name="attr_thrown_object_skill" value="10" />
         					</div>
         					<div class="sheet-cell sheet-col11">
-        						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Thrown Object @{thrown_object_weight} lbs.}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{thrown_object_skill} + @{modifier}]]}} {{notes=@{thrown_object_notes}}} {{rof=@{thrown_object_rof}}} {{recoil=@{thrown_object_recoil}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+        						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Attack}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Thrown Object @{thrown_object_weight} lbs.}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{thrown_object_skill} + @{modifier}]]}} {{showNotes=[[1]]}} {{notes=@{thrown_object_notes}}} {{rof=@{thrown_object_rof}}} {{recoil=@{thrown_object_recoil}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
         					</div>
         				</div> <!-- .sheet-row -->
         				<div class="sheet-row sheet-row-details2">
@@ -3348,7 +3348,7 @@
     					</div>
     					<div class="cell roll-damage">
     					    <input type="hidden" name="attr_thrust_damage_dice_icon" class="thrust-damage-dice-icon" value="explode" />
-						    <button type="roll" value="@{roll}&{template:skillRoll} {{type=Damage Roll}} {{characterName=@{character_name}}} {{skillName=Falling Damage}} {{damageRoll=[[@{falling_damage}]]}} {{notes=@{falling_collision_damage_notes}}}" name="roll_dmgFalling" class="roll_damage" />
+						    <button type="roll" value="@{roll}&{template:skillRoll} {{type=Damage Roll}} {{characterName=@{character_name}}} {{skillName=Falling Damage}} {{damageRoll=[[@{falling_damage}]]}} {{showNotes=[[1]]}} {{notes=@{falling_collision_damage_notes}}}" name="roll_dmgFalling" class="roll_damage" />
     					</div>
 						<div class="cell reset">
 					        <button type="action" name="act_falling_reset" class="reset" />Reset</button>
@@ -3379,7 +3379,7 @@
     					</div>
     					<div class="cell roll-damage">
     					    <input type="hidden" name="attr_thrust_damage_dice_icon" class="thrust-damage-dice-icon" value="explode" />
-						    <button type="roll" value="@{roll}&{template:skillRoll} {{type=Damage Roll}} {{characterName=@{character_name}}} {{skillName=Collision Damage}} {{damageRoll=[[@{collision_damage}]]}} {{notes=@{falling_collision_damage_notes}}}" name="roll_dmgFalling" class="roll_damage" />
+						    <button type="roll" value="@{roll}&{template:skillRoll} {{type=Damage Roll}} {{characterName=@{character_name}}} {{skillName=Collision Damage}} {{damageRoll=[[@{collision_damage}]]}} {{showNotes=[[1]]}} {{notes=@{falling_collision_damage_notes}}}" name="roll_dmgFalling" class="roll_damage" />
     					</div>
 						<div class="cell reset">
 					        <button type="action" name="act_collision_reset" class="reset" />Reset</button>
