Small adjustments because of Umlauts

--- a/Splittermond/Sheet.html
+++ b/Splittermond/Sheet.html
@@ -2074,7 +2074,7 @@
         <h1 style="color: white;">Letzte Updates</h1> <br/>
         <h2 style="color: white;">18.06.2019</h2>
         <ul>
-            <li>Beim NSC-Bogen wurden Buttons für die Aktive Abwehr sowie f&uuml;r Aktive Abwehr als SL-Wurf hinzugef&uuml;gt.</li>
+            <li>Beim NSC-Bogen wurden Buttons f&uuml;r den Angriff sowie f&uuml;r die Aktive Abwehr als SL-W&uuml;rfe hinzugef&uuml;gt.</li>
         </ul>
         <h2 style="color: white;">06.06.2019</h2>
         <ul>
