Starfinder (simple) update 061619a
fix bug in ability source options

--- a/Starfinder (simple)/Starfinder (simple).html
+++ b/Starfinder (simple)/Starfinder (simple).html
@@ -1275,7 +1275,7 @@
 	    					<option value="Trait">Theme</option>
 		    				<option value="Class">Class</option>
 			    			<option value="Feat">Feat</option>
-				    		<option value="Feat">Item</option>
+				    		<option value="Item">Item</option>
 					    	<option value="Other">Other</option>
 					    </select>
 				    </span>
