--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -20,15 +20,7 @@
 	        <div class="content">
 	            <h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 	            <ul>
-	                <li>
-	                    Notes boxes for advantages, disadvantages, racial traits, skills, techniques, possesions table, and spells
-	                    were converted to a text area, allowing you to enter more notes easily. There's also an option to include 
-	                    the notes on the roll table. For the possesions table, you could use the text area to list items, such as 
-	                    items in a backpack.
-	                </li>
-	                <li>Roll results table. Removed "Notes" label to provide more space to notes.</li>
-	                <li>Skills tab: changed column heading from BONUS to MOD. MOD can be positive or negative numbers. Suggested by Mike W.</li>
-	                <li>Removed powered by GURPS logo. Suggested by Mike W.</li>
+	                <li>Grimoire tab: Added checkbox to highlight spells. Added a spell level modifier column.</li>
                 </ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -3529,6 +3521,7 @@
 					<div class="sheet-cell sheet-col1"></div>
 					<div class="sheet-cell sheet-col2">Level</div>
 					<div class="sheet-cell sheet-col3">Diff</div>
+					<div class="sheet-cell sheet-col4">Mod</div>
 					<div class="sheet-cell sheet-col4">Pts</div>
 					<div class="sheet-cell sheet-col5">Time</div>
 					<div class="sheet-cell sheet-col6">Duration</div>
@@ -3537,7 +3530,8 @@
 					<div class="sheet-cell sheet-col9">Ref</div>
 				</div> <!-- .sheet-header -->
 				<fieldset class="repeating_spells">
-					<input class="sheet-toggle" type="checkbox" />
+				    <input class="toggle-highlight" type="checkbox" name="attr_highlight" />
+					<input class="toggle toggle-notes" type="checkbox" />
 					<span class="sheet-checkbox"></span>
 					<div class="sheet-row sheet-row-stats">
 						<div class="sheet-cell sheet-col0">
@@ -3548,7 +3542,7 @@
 						</div>
 						<div class="sheet-cell sheet-col2">
 							<input type="text" name="attr_level" disabled="disabled"
-								value="@{spell_base} + @{difficulty} + @{spell_bonus} + (floor((@{points} * 0.25) + 2) * ceil( ( ( @{points} - 2 ) + abs( @{points} - 2) ) / 256 ) + @{points} * abs( ceil( ( ( @{points} - 2 ) + abs( @{points} - 2) ) / 256 ) - 1 ))"/>
+								value="@{spell_base} + @{difficulty} + @{modifier} + @{spell_bonus} + (floor((@{points} * 0.25) + 2) * ceil( ( ( @{points} - 2 ) + abs( @{points} - 2) ) / 256 ) + @{points} * abs( ceil( ( ( @{points} - 2 ) + abs( @{points} - 2) ) / 256 ) - 1 ))"/>
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<select name="attr_difficulty">
@@ -3557,7 +3551,10 @@
 							</select>
 						</div>
 						<div class="sheet-cell sheet-col4">
-							<input type="number" name="attr_points" value"0" />
+							<input type="number" name="attr_modifier" value="0" />
+						</div>
+						<div class="sheet-cell sheet-col4">
+							<input type="number" name="attr_points" value="0" />
 						</div>
 						<div class="sheet-cell sheet-col5">
 							<input type="text" name="attr_casttime" />
@@ -3624,6 +3621,12 @@
 
 		<p>If there are others that are working on or wish to work on this sheet, lets coordinate using the Roll20 forum for now - perhaps later we can use GitHub.</p>
 	<ul>
+	    
+	<h4>Version 1.6.0</h4>
+	
+	<ul>
+	    <li>Grimoire tab: Added checkbox to highlight spells. Added a spell level modifier column.</li>
+	</ul>
 	
 	<h4>Version: 1.5.9</h4>
 	
@@ -3659,7 +3662,7 @@
 	    <li>Combat Tab: Added Falling and collision combat tool</li>
     </ul>
 	    
-	<h4>Version: 1.5.99</h4>
+	<h4>Version: 1.5.6</h4>
 	
 	<p>Pull Request: 4/9/2019</p>
 	
@@ -4282,7 +4285,7 @@ Skull Damage x4
 
 	var noop = function () {}; // do nothing.
 
-	var version = "1.5.9";
+	var version = "1.6.0";
 
 	var modCascade = true;
 	
