--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.00</span>
+<span class="version bold">Sheet Version: 1.01</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -521,7 +521,7 @@
 <!-- ------------------------BODY------------------------------------------>
 
     <div class="grid-side">
-      <label>community</label>
+      <label>BODY</label>
       <label>STAT</label>
     </div>
     <div>
