--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -20,7 +20,13 @@
 	        <div class="content">
 	            <h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 	            <ul>
-	                <li>Grimoire tab: Added checkbox to highlight spells. Added a spell level modifier column.</li>
+	                <li>Rolltable update: Move "Ref" to the right of roll type to save space. Suggested by Mike W.</li>
+	                <li>Grimoire tab: Added checkbox to highlight spells. Added a spell level modifier column. Suggested by Mike W.</li>
+	                <li>
+	                    Fallling/Collision notes: Revised the default notes when the falling damage is rolled. 
+	                    However, these notes are only visible on new characters sheets, since the those notes can be edited on the options page.
+	                </li>
+	                <li>Bug fix: Racial Traits Self-control roll. Success/Fail text was missing, fixed.</li>
                 </ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -1963,7 +1969,7 @@
 							<input type="number" name="attr_control_rating" />
 						</div>
 						<div class="sheet-cell sheet-col2">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Self-control Check}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{control_rating} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsRSCR" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Self-control Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{control_rating} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[@{show_notes}]]}} {{bookReference=@{ref}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsRSCR" />
 						</div>
 						<div class="sheet-cell sheet-col3">
 							<input type="number" name="attr_points" />
@@ -3625,7 +3631,13 @@
 	<h4>Version 1.6.0</h4>
 	
 	<ul>
+	    <li>Rolltable update: Move "Ref" to the right of roll type to save space. Suggested by Mike W.</li>
 	    <li>Grimoire tab: Added checkbox to highlight spells. Added a spell level modifier column.</li>
+	    <li>
+            Fallling/Collision notes: Revised the default notes when the falling damage is rolled. 
+            However, these notes are only visible on new characters sheets, since the those notes can be edited on the options page.
+        </li>
+        <li>Bug fix: Racial Traits Self-control roll. Success/Fail text was missing, fixed.</li>
 	</ul>
 	
 	<h4>Version: 1.5.9</h4>
@@ -3889,7 +3901,9 @@
 			
 			<div class="box collision-falling-options">
 			    <span class="label">Falling & Collision Damage Notes</span><br />
-			    <textarea name="attr_falling_collision_damage_notes">If an object is bullet-shaped, sharp, or spiked, it does half damage, but this damage is piercing, cutting, or impaling, rather than crushing.</textarea>
+			    <textarea name="attr_falling_collision_damage_notes">Collisions: If an object is bullet-shaped, sharp, or spiked, it does half damage, but this damage is piercing, cutting, or impaling, rather than crushing.
+			    
+Falling Damage: If using hit locations, roll randomly for the hit location damaged in a fall. If the injury is to an extremity or a limb, do not ignore injury in excess of that required to cripple it. Instead, subtract the full amount from HP! If the fall would cripple a limb, roll 1d. On 5-6, all limbs of that type are crippled, although there is no extra injury. B431</textarea>
 			</div>
 			
 			<hr />
@@ -4067,6 +4081,9 @@ Skull Damage x4
                     <td class="label">Type:</td>
                     <td>
                         {{type}}
+                        {{#bookReference}}
+                        <span class="ref-label"><b>Ref:</b> {{bookReference}}</span>
+                        {{/bookReference}}
                     </td>
                 </tr>
                 {{/type}}
@@ -4269,12 +4286,6 @@ Skull Damage x4
                     <td>{{recoil}}</td>
                 </tr>
                 {{/recoil}}
-                {{#bookReference}}
-                <tr>
-                    <td class="label">Reference:</td>
-                    <td>{{bookReference}}</td>
-                </tr>
-                {{/bookReference}}
             </table>
         </div>
     </rolltemplate>
