HSD2 V1.03: few fields accept decimal inputs now and bug with body/community tracker on pg3 is fixed

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.01</span>
+<span class="version bold">Sheet Version: 1.02</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -237,8 +237,8 @@
 <!--  CREDITS -->
 
   <div class="credits section">
-    <span class="bold">Credits: <input type="number" name="attr_credits" class="txtfield ref" value="1000"></span>
-    <span class="bold">Debt:    <input type="number" name="attr_debt"    class="txtfield ref" value="0"></span>
+    <span class="bold">Credits: <input type="number" name="attr_credits" class="txtfield ref" step="any" value="1000" ></span>
+    <span class="bold">Debt:    <input type="number" name="attr_debt"    class="txtfield ref" step="any" value="0"></span>
   </div>
 
 <!--  Operations & augmentations title -->
@@ -331,9 +331,9 @@
     <hr style="width:100%">
     <fieldset class="repeating_equipment">
         <input name="attr_equipment"          type="text"  placeholder="Equipment" style="width:405px">
-        <input name="attr_equip_cargo_points" type="number" class="ref" value="1">
-        <input name="attr_equip_gear_score"   type="number" class="ref" value="1">
-        <input name="attr_equip_cost"         type="number" class="ref" value="1">
+        <input name="attr_equip_cargo_points" type="number" class="ref" step="any" value="1">
+        <input name="attr_equip_gear_score"   type="number" class="ref" step="any" value="1">
+        <input name="attr_equip_cost"         type="number" class="ref" step="any" value="1">
     </fieldset>
   </div>
 
@@ -526,69 +526,69 @@
     </div>
     <div>
       <input type="number" name="attr_stat1" value="1" class="txtfield" disabled="true">
-      <input type="checkbox" name="attr_community_stat1">
+      <input type="checkbox" name="attr_body_stat1">
     </div>
 
     <div>
-      <span>1 Movement <input type="checkbox" name="attr_community_stat2a"></span>
+      <span>1 Movement <input type="checkbox" name="attr_body_stat2a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Technq <input type="checkbox" name="attr_community_stat2b"></span>
+      <span>2 Technq <input type="checkbox" name="attr_body_stat2b"></span>
     </div>
     
     <div>
-      <span>2 Focus <input type="checkbox" name="attr_community_stat3a"></span>
+      <span>2 Focus <input type="checkbox" name="attr_body_stat3a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Readiness <input type="checkbox" name="attr_community_stat3b"></span>
+      <span>2 Readiness <input type="checkbox" name="attr_body_stat3b"></span>
     </div>
 
     <div>
       <input type="number" name="attr_stat2" value="2" class="txtfield" disabled="true">
-      <input type="checkbox" name="attr_community_stat4">
+      <input type="checkbox" name="attr_body_stat4">
     </div>
 
     <div>
-      <span>1 Movement <input type="checkbox" name="attr_community_stat5a"></span>
+      <span>1 Movement <input type="checkbox" name="attr_body_stat5a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Initiative<input type="checkbox" name="attr_community_stat5b"></span>
+      <span>2 Initiative<input type="checkbox" name="attr_body_stat5b"></span>
     </div>
 
     <div>
-      <span>2 Focus <input type="checkbox" name="attr_community_stat6a"></span>
+      <span>2 Focus <input type="checkbox" name="attr_body_stat6a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Readiness <input type="checkbox" name="attr_community_stat6b"></span>
+      <span>2 Readiness <input type="checkbox" name="attr_body_stat6b"></span>
     </div>
 
     <div>
       <input type="number" name="attr_stat3" value="3" class="txtfield" disabled="true">
-      <input type="checkbox" name="attr_community_stat7">
+      <input type="checkbox" name="attr_body_stat7">
     </div>
     <div>
-      <span>1 Movement <input type="checkbox" name="attr_community_stat8a"></span>
+      <span>1 Movement <input type="checkbox" name="attr_body_stat8a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Technq <input type="checkbox" name="attr_community_stat8b"></span>
+      <span>2 Technq <input type="checkbox" name="attr_body_stat8b"></span>
     </div>
     <div>
-      <span>2 Boon <input type="checkbox" name="attr_community_stat9a"></span>
+      <span>2 Boon <input type="checkbox" name="attr_body_stat9a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Readiness <input type="checkbox" name="attr_community_stat9b"></span>
+      <span>2 Readiness <input type="checkbox" name="attr_body_stat9b"></span>
     </div>
     <div>
       <input type="number" name="attr_stat4" value="4" class="txtfield" disabled="true">
-      <input type="checkbox" name="attr_community_stat10">
+      <input type="checkbox" name="attr_body_stat10">
     </div>
     <div>
-      <span>1 Movement <input type="checkbox" name="attr_community_stat11a"></span>
+      <span>1 Movement <input type="checkbox" name="attr_body_stat11a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Initiative <input type="checkbox" name="attr_community_stat11b"></span>
+      <span>2 Initiative <input type="checkbox" name="attr_body_stat11b"></span>
     </div>
     <div>
-      <span>2 Notoriety<input type="checkbox" name="attr_community_stat12a"></span>
+      <span>2 Notoriety<input type="checkbox" name="attr_body_stat12a"></span>
       <label class="grid-or">OR</label>
-      <span>2 Readiness <input type="checkbox" name="attr_community_stat12b"></span>
+      <span>2 Readiness <input type="checkbox" name="attr_body_stat12b"></span>
     </div>
     <div>
       <input type="number" name="attr_stat5" value="5" class="txtfield" disabled="true">
-      <input type="checkbox" name="attr_community_stat13">
+      <input type="checkbox" name="attr_body_stat13">
     </div>
 
 <!-- ------------------------BODY PERCEIVE------------------------------->
